// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render - withAnimation 1`] = `
<div>
  <div
    class="counter-number"
    style="font-size: 80px; height: 92px;"
  >
    <div
      class="current"
      style="height: 92px; transition: transform 500ms; transform: translate(0, 92px);"
    />
    <div
      class="next"
      style="height: 92px; transition: transform 500ms; transform: translate(0, -92px);"
    />
  </div>
</div>
`;

exports[`render 1`] = `
<div>
  <div
    class="counter-number"
    style="font-size: 50px; height: 57.49999999999999px;"
  >
    <div
      class="current"
      style="height: 57.49999999999999px;"
    />
    <div
      class="next"
      style="height: 57.49999999999999px;"
    />
  </div>
</div>
`;

exports[`render with floats 1`] = `
<div>
  <div
    class="counter-number"
    style="font-size: 80px; height: 92px;"
  >
    <div
      class="current"
      style="height: 92px;"
    />
    <div
      class="next"
      style="height: 92px;"
    />
  </div>
</div>
`;

exports[`render with floats with decimals 1`] = `
<div>
  <div
    class="counter-number"
    style="font-size: 80px; height: 92px;"
  >
    <div
      class="current"
      style="height: 92px;"
    />
    <div
      class="next"
      style="height: 92px;"
    />
  </div>
</div>
`;

exports[`render without end 1`] = `
<div>
  <div
    class="counter-number"
    style="font-size: 80px; height: 92px;"
  >
    <div
      class="current"
      style="height: 92px;"
    />
    <div
      class="next"
      style="height: 92px;"
    />
  </div>
</div>
`;

exports[`render without start 1`] = `
<div>
  <div
    class="counter-number"
    style="font-size: 80px; height: 92px;"
  >
    <div
      class="current"
      style="height: 92px;"
    />
    <div
      class="next"
      style="height: 92px;"
    />
  </div>
</div>
`;
